# tradesim

./: .gitignore  CMakeLists.txt  Dockerfile  README  README.md  bank.cpp  default.nix  flake.nix  main.cpp  market.cpp  market.h  shell.nix  stochastic.cpp  stochastic.h  stock.cpp  stock.h
src/: CMakeLists.txt  bank.h  main.cpp  market.cpp  market.h  output.cpp  output.h  portfolio.cpp  portfolio.h  simulator.cpp  simulator.h  stochastic.cpp  stochastic.h  stock.cpp  stock.h  test.cpp  trading_day.cpp  trading_day.h
